LU-5263 llite: update ras stride offset

When a read ahead does not reach the end of the region reserved from
ras, we'd set ras::ras_next_readahead back to where we left off, but
we also need to adjust ras:ras_stride_offset accordingly.

Signed-off-by: Bobi Jam <bobijam.xu@intel.com>
Change-Id: I4996f0d8174fa72ea4ef5994daddc0ab2f922f38